; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msgsm32.acm/extr_msgsm32.c_GSM_FormatTagDetails.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msgsm32.acm/extr_msgsm32.c_GSM_FormatTagDetails.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i8*, i32 }

@GSM_FormatTagDetails.szPcm = internal constant [4 x i8] c"PCM\00", align 1
@GSM_FormatTagDetails.szGsm = internal constant [9 x i8] c"GSM 6.10\00", align 1
@ACMERR_NOTPOSSIBLE = common dso_local global i32 0, align 4
@WAVE_FORMAT_UNKNOWN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Unsupported query %08x\0A\00", align 1
@MMSYSERR_NOTSUPPORTED = common dso_local global i32 0, align 4
@ACMDRIVERDETAILS_SUPPORTF_CODEC = common dso_local global i32 0, align 4
@gsm_rates = common dso_local global i32 0, align 4
@MMSYSERR_NOERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @GSM_FormatTagDetails to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GSM_FormatTagDetails(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %38 [
    i32 131, label %7
    i32 130, label %15
    i32 132, label %25
  ]

7:                                                ; preds = %2
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp sgt i32 %10, 1
  br i1 %11, label %12, label %14

12:                                               ; preds = %7
  %13 = load i32, i32* @ACMERR_NOTPOSSIBLE, align 4
  store i32 %13, i32* %3, align 4
  br label %77

14:                                               ; preds = %7
  br label %42

15:                                               ; preds = %2
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @WAVE_FORMAT_UNKNOWN, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  store i32 1, i32* %23, align 8
  br label %42

24:                                               ; preds = %15
  br label %25

25:                                               ; preds = %2, %24
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  switch i32 %28, label %35 [
    i32 128, label %29
    i32 129, label %32
  ]

29:                                               ; preds = %25
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  store i32 0, i32* %31, align 8
  br label %37

32:                                               ; preds = %25
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  store i32 1, i32* %34, align 8
  br label %37

35:                                               ; preds = %25
  %36 = load i32, i32* @ACMERR_NOTPOSSIBLE, align 4
  store i32 %36, i32* %3, align 4
  br label %77

37:                                               ; preds = %32, %29
  br label %42

38:                                               ; preds = %2
  %39 = load i32, i32* %5, align 4
  %40 = call i32 @WARN(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* @MMSYSERR_NOTSUPPORTED, align 4
  store i32 %41, i32* %3, align 4
  br label %77

42:                                               ; preds = %37, %21, %14
  %43 = load i32, i32* @ACMDRIVERDETAILS_SUPPORTF_CODEC, align 4
  %44 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %44, i32 0, i32 5
  store i32 %43, i32* %45, align 8
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 8
  switch i32 %48, label %75 [
    i32 0, label %49
    i32 1, label %62
  ]

49:                                               ; preds = %42
  %50 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %50, i32 0, i32 1
  store i32 128, i32* %51, align 4
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 2
  store i32 4, i32* %53, align 8
  %54 = load i32, i32* @gsm_rates, align 4
  %55 = call i8* @ARRAY_SIZE(i32 %54)
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 4
  store i8* %55, i8** %57, align 8
  %58 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %59 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %58, i32 0, i32 3
  %60 = load i32, i32* %59, align 4
  %61 = call i32 @lstrcpyW(i32 %60, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @GSM_FormatTagDetails.szPcm, i64 0, i64 0))
  br label %75

62:                                               ; preds = %42
  %63 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %64 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %63, i32 0, i32 1
  store i32 129, i32* %64, align 4
  %65 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %66 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %65, i32 0, i32 2
  store i32 4, i32* %66, align 8
  %67 = load i32, i32* @gsm_rates, align 4
  %68 = call i8* @ARRAY_SIZE(i32 %67)
  %69 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %70 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %69, i32 0, i32 4
  store i8* %68, i8** %70, align 8
  %71 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %72 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %71, i32 0, i32 3
  %73 = load i32, i32* %72, align 4
  %74 = call i32 @lstrcpyW(i32 %73, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @GSM_FormatTagDetails.szGsm, i64 0, i64 0))
  br label %75

75:                                               ; preds = %42, %62, %49
  %76 = load i32, i32* @MMSYSERR_NOERROR, align 4
  store i32 %76, i32* %3, align 4
  br label %77

77:                                               ; preds = %75, %38, %35, %12
  %78 = load i32, i32* %3, align 4
  ret i32 %78
}

declare dso_local i32 @WARN(i8*, i32) #1

declare dso_local i8* @ARRAY_SIZE(i32) #1

declare dso_local i32 @lstrcpyW(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
